--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>put-selector</artifactId>
-    <version>0.3.5</version>
+    <version>0.3.6-SNAPSHOT</version>
     <name>put-selector</name>
     <description>WebJar for put-selector</description>
     <url>http://webjars.org</url>
@@ -55,7 +55,7 @@
         <url>http://github.com/webjars/put-selector</url>
         <connection>scm:git:https://github.com/webjars/put-selector.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/put-selector.git</developerConnection>
-        <tag>put-selector-0.3.5</tag>
+        <tag>HEAD</tag>
     </scm>
     
     <build>
